# ProDOS8Emu

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  RTN_MARKERS_README.md  TASK_COMPLETION_RECORD.md  do.sh  insert_rtn_markers.sh  layout.md  regenerate_edasm_src.sh  test_dir_read.cpp
.github/: copilot-instructions.md
.github/agents/: Atlas.agent.md  Code-Review-subagent.agent.md  Explorer-subagent.agent.md  Frontend-Engineer-subagent.agent.md  Oracle-subagent.agent.md  Prometheus.agent.md  Sisyphus-subagent.agent.md
.github/skills/edasm-automation/: SKILL.md
.trunk/: trunk.yaml
.trunk/configs/: .shellcheckrc
_codeql_build_dir/: prodos8emu_filing_tests  prodos8emu_housekeeping_tests  prodos8emu_memory_tests  prodos8emu_path_prefix_tests
examples/: rearrange_example.json
include/prodos8emu/: access_byte.hpp  apple2mem.hpp  cpu65c02.hpp  errors.hpp  memory.hpp  mli.hpp  path.hpp  system_loader.hpp  xattr.hpp
plans/: cpu65c02-general-monitor-symbol-table-complete.md  cpu65c02-general-monitor-symbol-table-phase-1-complete.md  cpu65c02-general-monitor-symbol-table-phase-2-complete.md  cpu65c02-general-monitor-symbol-table-phase-3-complete.md  cpu65c02-general-monitor-symbol-table-phase-4-complete.md  cpu65c02-general-monitor-symbol-table-plan.md  cpu65c02-maintainability-refactor-complete.md  cpu65c02-maintainability-refactor-phase-1-complete.md  cpu65c02-maintainability-refactor-phase-2-complete.md  cpu65c02-maintainability-refactor-phase-3-complete.md  cpu65c02-maintainability-refactor-phase-4-complete.md  cpu65c02-maintainability-refactor-phase-5-complete.md  cpu65c02-maintainability-refactor-plan.md  cpu65c02-maintainability-refactor-round2-complete.md  cpu65c02-maintainability-refactor-round2-phase-1-complete.md  cpu65c02-maintainability-refactor-round2-phase-2-complete.md  cpu65c02-maintainability-refactor-round2-phase-3-complete.md  cpu65c02-maintainability-refactor-round2-plan.md  cpu65c02-maintainability-refactor-round3-complete.md  cpu65c02-maintainability-refactor-round3-phase-1-complete.md  cpu65c02-maintainability-refactor-round3-phase-2-complete.md  cpu65c02-maintainability-refactor-round3-phase-3-complete.md  cpu65c02-maintainability-refactor-round3-plan.md  cpu65c02-maintainability-refactor-round4-complete.md  cpu65c02-maintainability-refactor-round4-phase-1-complete.md  cpu65c02-maintainability-refactor-round4-phase-2-complete.md  cpu65c02-maintainability-refactor-round4-phase-3-complete.md  cpu65c02-maintainability-refactor-round4-plan.md  cpu65c02-maintainability-refactor-round5-complete.md  cpu65c02-maintainability-refactor-round5-phase-1-complete.md  cpu65c02-maintainability-refactor-round5-phase-2-complete.md  cpu65c02-maintainability-refactor-round5-phase-3-complete.md  cpu65c02-maintainability-refactor-round5-plan.md  cpu65c02-maintainability-refactor-round6-complete.md  cpu65c02-maintainability-refactor-round6-phase-1-complete.md  cpu65c02-maintainability-refactor-round6-phase-2-complete.md  cpu65c02-maintainability-refactor-round6-phase-3-complete.md  cpu65c02-maintainability-refactor-round6-phase-4-complete.md  cpu65c02-maintainability-refactor-round6-plan.md  cpu65c02-maintainability-refactor-round7-complete.md  (+87 more)
src/: apple2mem.cpp  cpu65c02.cpp  mli.cpp  mli_dispatch.cpp  mli_filing.cpp  mli_housekeeping.cpp  mli_system.cpp  monitor_symbols.cpp  monitor_symbols.hpp  path.cpp  system_loader.cpp  xattr.cpp
tests/: apple2mem_test.cpp  cpu65c02_disassembly_core_test.cpp  cpu65c02_test.cpp  emulator_startup_test.cpp  filing_test.cpp  housekeeping_test.cpp  memory_test.cpp  path_prefix_test.cpp  prodos8emu_run_cli_test.cpp  python_edasm_setup_test.py  python_linux_to_prodos_text_test.py  python_prodos_text_to_linux_test.py  smoke_test.cpp  system_test.cpp
third_party_docs/: README.md
tools/: bootstrap_edasm_inputs.py  cadius_xattr_convert.py  diff_continuation_lines.py  disassembly_log_analyzer.py  edasm_setup.py  linux_to_prodos_text.py  prodos8emu_run.cpp  prodos_text_to_linux.py  run_edasm_job.py
